syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = 'github.com/MonitorAllen/nostalgia/pb';

message Category {
  int64 id = 1;
  string name = 2;
  optional int64 article_count = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  bool is_system = 6;
}

message CreateCategoryRequest {
  string name = 1;
}

message CreateCategoryResponse {
  Category category = 1;
}

message DeleteCategoryRequest {
  int64 id = 1;
}

message DeleteCategoryResponse {}

message UpdateCategoryRequest {
  int64 id = 1;
  string name = 2;
}

message UpdateCategoryResponse {
  Category category = 1;
}

message ListCategoriesRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListCategoriesResponse {
  repeated Category categories = 1;
  int64 count = 2;
}

message ListAllCategoriesRequest {}

message ListAllCategoriesResponse {
  repeated Category categories = 1;
}